@@ -11,6 +11,8 @@ git-annex (5.20140614) UNRELEASED; urgency=medium
     queue flushing than necessary.
   * Run standalone install process when the assistant is started
     (was only being run when the webapp was opened).
+  * importfeed: When annex.genmetadata is set, metadata from the feed
+    is added to files that are imported from it.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2014 11:28:42 -0400
 
